# pet_project_partitioning_data

./: .gitignore  README.md  docker-compose.yaml  init_orders.py  init_orders_ch.py  init_orders_parquet.py  init_orders_pg.py  main.ipynb  pyproject.toml
sql_ddl/: DDL_CH.sql  DDL_PG.sql
