[project]
name = "pet-project-partitioning-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=1.4.1",
    "duckdb==1.5.4",
    "jupyterlab>=4.6.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
]
